--- a/src/app/components/hero-item/hero-item.component.html
+++ b/src/app/components/hero-item/hero-item.component.html
@@ -1,39 +1,39 @@
-<div class="max-w-sm rounded overflow-hidden shadow-lg bg-white border-2 m-2">
-  <img class="w-full" [src]="hero.image" alt="Aioria de Leo" />
+<div class="max-w-sm w-72  rounded overflow-hidden shadow-lg bg-white border-2 m-2">
+  <img class="w-full h-80 object-cover" [src]="hero().image" alt="Caballero del zodiaco" />
 
   <div class="px-6 py-4 bg-gray-200/75">
-    <div class="font-bold text-xl mb-2">{{ hero.name }}</div>
+    <div class="font-bold text-xl mb-2">{{ hero().name }}</div>
 
     <div class="text-gray-700 text-base font-bold">
       <div class="flex gap-2 mb-2">
         <span class="block"
-          >Inteligencia: {{ hero.powerstats.intelligence }}</span
+          >Inteligencia: {{ hero().powerstats.intelligence }}</span
         >
         <button  (click)="decrementPowerStats('intelligence')"class="cursor-pointer border px-2 rounded">-</button>
         <button (click)="incrementPowerStats('intelligence')" class="cursor-pointer border px-2 rounded">+</button>
       </div>
       <div class="flex gap-2 mb-2">
-        <span class="block">Combate: {{ hero.powerstats.combat }}</span>
+        <span class="block">Combate: {{ hero().powerstats.combat }}</span>
         <button (click)="decrementPowerStats('combat')"class="cursor-pointer border px-2 rounded">-</button>
         <button (click)="incrementPowerStats('combat')"class="cursor-pointer border px-2 rounded">+</button>
       </div>
       <div class="flex gap-2 mb-2">
-        <span class="block">Fuerza: {{ hero.powerstats.strength }}</span>
+        <span class="block">Fuerza: {{ hero().powerstats.strength }}</span>
         <button (click)="decrementPowerStats('strength')" class="cursor-pointer border px-2 rounded">-</button>
         <button (click)="incrementPowerStats('strength')"class="cursor-pointer border px-2 rounded">+</button>
       </div>
       <div class="flex gap-2 mb-2">
-        <span class="block">Velocidad: {{ hero.powerstats.speed }}</span>
+        <span class="block">Velocidad: {{ hero().powerstats.speed }}</span>
         <button  (click)="decrementPowerStats('speed')" class="cursor-pointer border px-2 rounded">-</button>
         <button (click)="incrementPowerStats('speed')"class="cursor-pointer border px-2 rounded">+</button>
       </div>
       <div class="flex gap-2 mb-2">
-        <span class="block">Durabilidad: {{ hero.powerstats.durability }}</span>
+        <span class="block">Durabilidad: {{ hero().powerstats.durability }}</span>
         <button (click)="decrementPowerStats('durability')" class="cursor-pointer border px-2 rounded">-</button>
         <button (click)="incrementPowerStats('durability')" class="cursor-pointer border px-2 rounded">+</button>
       </div>
       <div class="flex gap-2 mb-2">
-        <span class="block">Poder: {{ hero.powerstats.power }}</span>
+        <span class="block">Poder: {{ hero().powerstats.power }}</span>
         <button (click)="decrementPowerStats('power')"class="cursor-pointer border px-2 rounded">-</button>
         <button (click)="incrementPowerStats('power')" class="cursor-pointer border px-2 rounded">+</button>
       </div>
