--- a/src/app/components/hero-list/hero-list.component.html
+++ b/src/app/components/hero-list/hero-list.component.html
@@ -1,5 +1,5 @@
 <div class="flex gap-1">
-    <app-hero-item/>
-    <app-hero-item/>
-    <app-hero-item/>
+    <app-hero-item [hero]="heroes[0]"/>
+    <app-hero-item [hero]="heroes[1]"/>
+    <app-hero-item [hero]="heroes[2]"/>
 </div>
